<resources>
    <string name="app_name">E-CommerceApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_cort">Cort</string>
    <string name="title_Home">Home</string>
    <string name="mostafa_el_naggar">Mostafa El-Naggar</string>
    <string name="email">bogynaggar@gmail.com</string>
    <string name="title_setting">Settings</string>
    <string name="title_contact">Contact</string>
    <string name="title_share">Share App</string>
    <string name="title_help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_account">Account</string>
    <string name="title_notification">Notification</string>
    <string name="title_language">Language</string>
    <string name="title_selectedLanguage">English</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_helpCenter">Help Center</string>
    <string name="title_aboutUs">About us</string>
    <string name="hello">Hello</string>
    <string name="featured">Featured</string>
    <string name="See_all">See all</string>
    <string name="item_name">Item name</string>
    <string name="item_price">40</string>
    <string name="item_price_LE">LE</string>
    <string name="most_popular">Most Popular</string>
</resources>