<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.e_commerceapp.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.e_commerceapp.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_cort"
        android:name="com.example.e_commerceapp.CortFragment"
        android:label="@string/title_cort"
        tools:layout="@layout/fragment_cort" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.e_commerceapp.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_settingActivity"
            app:destination="@id/settingActivity"
            app:enterAnim="@android:anim/bounce_interpolator"
            app:exitAnim="@android:anim/cycle_interpolator" />
    </fragment>
    <activity
        android:id="@+id/settingActivity"
        android:name="com.example.e_commerceapp.SettingActivity"
        android:label="activity_setting"
        tools:layout="@layout/activity_setting" />

    <activity
        android:id="@+id/user_profile"
        android:name="com.example.e_commerceapp.User_profile"
        android:label="activity_user_profile"
        tools:layout="@layout/activity_user_profile" />

</navigation>