<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileIMage"
        android:layout_height="50dp"
        android:layout_width="50dp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/profile_image"
        app:strokeWidth="1dp"
        />

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profileIMage"
        app:layout_constraintTop_toTopOf="@id/profileIMage"
        android:text="@string/hello"
        android:layout_marginStart="15dp"
        android:textColor="@color/arrowBlack"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profileIMage"
        app:layout_constraintTop_toBottomOf="@id/hello"
        android:text="@string/mostafa_el_naggar"
        android:layout_marginStart="15dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/arrowBlack"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/backArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/notification_bell_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/arrowBlack"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:gravity="start"
            android:layout_gravity="start"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_shape"
                android:inputType="text"
                android:hint="@string/title_search"
                android:textSize="13sp"

                >
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search"
            app:iss_title_background="@drawable/gradient"
            app:iss_auto_cycle="true"
            app:iss_period="1000"
            app:iss_delay="1000"
            app:iss_text_align="CENTER"
            app:iss_placeholder="@drawable/rectangle_shape"
            />

    <TextView
        android:id="@+id/featured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_slider"
        android:textColor="@color/arrowBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/featured_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/See_all"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_slider"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_featuredRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/featured"
        />

    <TextView
        android:id="@+id/popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/most_popular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_featuredRv"
        android:textColor="@color/arrowBlack"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/popular_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/See_all"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_featuredRv"
        android:textColor="@color/purple_700"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_MostPopularRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popular"
        />


</androidx.constraintlayout.widget.ConstraintLayout>